# Lameboi

./: .gitignore  CMakeLists.txt  CPU.cpp  CPU.h  PPU.h  README.md  emulatorscreen.cpp  emulatorscreen.h  imgui.ini  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
Gameboy/: CPU.cpp  CPU.h  GB.cpp  GB.h  PPU.cpp  PPU.h  memory.h
lib/PFD/: PFD.h
lib/gl3w/: CMakeLists.txt
lib/imgui/: CMakeLists.txt  imgui_mem_editor.h
src/: App.h  lameboi.rc  main.cpp
src/Debug/: Debugger.cpp  VRAMViewer.h
src/Gameboy/: APU.cpp  APU.h  CPU.cpp  CPU.h  Debugger.h  Gameboy.h  IO.cpp  IO.h  Interrupt.h  Joypad.cpp  Joypad.h  MBC.h  Memory.cpp  Memory.h  PPU.cpp  PPU.h  Palette.h  Scheduler.cpp  Scheduler.h  Sprite.h  VRAMViewer.h
src/Gameboy/channel/: SoundControl.cpp  SoundControl.h  Square.cpp  Square.h  SquareSweep.cpp  SquareSweep.h  Wave.cpp  Wave.h
src/Gameboy/io/: Joypad.cpp  Joypad.h  SerialPort.h  Timer.h
src/Gameboy/mbc/: IMBC.h  MBC.cpp  MBC.h  MBC0.h  MBC1.h  MBC3.h  MBC5.h
src/Gameboy/ppu/: Palette.h  Sprite.h
src/UI/: DebugWindow.h  DisplayWindow.h  FileMenu.h  InputWindow.h  MainMenu.h  MainWindow.h  PPUMenu.h  PPUWindow.h
src/UI/debug/: BreakpointsWindow.h  CPUWindow.h  MemoryWindow.h
src/UI/ppu/: BGMapWindow.h  OAMWindow.h  TileDataWindow.h
src/Util/: Common.h  ImGuiHeaders.h  Math.h  SDLHeaders.h  Texture.h  types.h
src/core/: APU.cpp  APU.h  CPU.cpp  CPU.h  Config.cpp  Config.h  Debugger.cpp  Debugger.h  Gameboy.cpp  Gameboy.h  IO.h  Input.cpp  Input.h  Interrupt.h  Memory.cpp  Memory.h  PPU.cpp  PPU.h  Scheduler.cpp  Scheduler.h  SpriteManager.cpp  SpriteManager.h
src/core/channel/: Channel.h  Envelope.h  LengthCounter.h  Noise.cpp  Noise.h  SoundControl.cpp  SoundControl.h  Square.cpp  Square.h  SquareSweep.cpp  SquareSweep.h  Wave.cpp  Wave.h
src/core/io/: Joypad.cpp  Joypad.h  SerialPort.h  Timer.h
src/core/mbc/: MBC.cpp  MBC.h  MBC0.h  MBC1.h  MBC3.h  MBC5.h
src/core/ppu/: Palette.h  Sprite.h
src/frontend/: DebugMenu.cpp  DebugMenu.h  DebugWindow.cpp  DebugWindow.h  DisplayWindow.cpp  DisplayWindow.h  FileMenu.cpp  FileMenu.h  InputWindow.h  MainMenu.cpp  MainMenu.h  MainWindow.h  PPUMenu.h  SettingsWindow.cpp  SettingsWindow.h  ViewportWindow.cpp  ViewportWindow.h
src/frontend/debug/: BreakpointsWindow.h  CPUWindow.h  MemoryWindow.h
src/frontend/ppu/: BGMapWindow.cpp  BGMapWindow.h  OAMWindow.cpp  OAMWindow.h  TileDataWindow.cpp  TileDataWindow.h
src/frontend/shaders/: cube.frag  cube.vert
src/frontend/widgets/: SquareResize.h
src/util/: Color.h  Common.h  FileUtil.h  GLFWLoader.h  GLHeaders.h  ImGuiHeaders.h  Log.h  RegPair.h  RenderTexture.cpp  RenderTexture.h  SDLHeaders.h  SDLInterface.cpp  SDLInterface.h  Settings.h  StringUtils.h  Texture.h  Types.h
src/util/gl/: ImageTexture.cpp  ImageTexture.h  Shader.h  Texture.h
